@@ -16,6 +16,7 @@ Broker:
 - Add support for "-v" option on the command line to provide the equivalent of
   "log_type all" without needing a config file.
 - mosquitto.conf is now installed as mosquitto.conf.example
+- Fix an ACL with topic "#" incorrectly granting access to $SYS.
 - mosquitto_passwd utility now reports errors more clearly.
 - Fix retained messages incorrectly being set on wildcard topics, leading to
   duplicate retained messages being sent on subscription. Closes bug #1116233.
